[package]
name = "chat-with-text"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
openai-flows = "0.9"
webhook-flows = "0.3"
llmservice-flows = "0.2.0"
vector-store-flows = "0.1"
store-flows = "0.3"
serde_json = "1.0"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1"
log = "0.4"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
rand="0.8"
regex = "1.4.2"
itertools = "0.12.0"
nalgebra = "0.32.3"
